Tweak padding to avoid unnecessary scrollbar in overlay view mode

--- a/src/plugins/controlbox/styles/_controlbox.scss
+++ b/src/plugins/controlbox/styles/_controlbox.scss
@@ -265,7 +265,7 @@
             left: 0;
             text-align: left;
             overflow-x: hidden;
-            padding: 0 0 1em 0;
+            padding: 0;
 
             .controlbox-padded {
                 padding-left: 1em;
@@ -288,7 +288,7 @@
 
             .switch-form {
                 text-align: center;
-                padding: 2em 0;
+                padding: 1em 0;
             }
             dd {
                 margin-left: 0;
@@ -523,6 +523,7 @@
             }
             .controlbox-panes {
                 padding-top: 2em;
+                padding-bottom: 1em;
             }
         }
     }
